--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,3 +34,11 @@ html[data-theme="dark"] {
 .maplibregl-popup-close-button {
   @apply px-2;
 }
+
+.location-list {
+  @apply flex flex-nowrap mt-4 gap-2 overflow-auto;
+}
+
+.page-content-top {
+  @apply p-4 min-h-72;
+}
